--- a/tmux.conf
+++ b/tmux.conf
@@ -15,7 +15,7 @@ set -s escape-time 10                     # faster command sequences
 set -sg repeat-time 600                   # increase repeat timeout
 set -s focus-events on
 
-set -g prefix2 C-a                        # GNU-Screen compatible prefix
+set -g prefix2 C-o                        # GNU-Screen compatible prefix
 bind C-a send-prefix -2
 
 set -q -g status-utf8 on                  # expect UTF-8 (tmux < 2.2)
